# ai-dev-zoomcamp

./: .gitignore  README.md
Homework/Homework1/: README.md  pyproject.toml  requirements.txt
Homework/Homework1/todo_project/templates/: base.html
Homework/Homework1/todo_project/templates/todos/: home.html  todo_form.html
Homework/Homework1/todo_project/todo_project/: settings.py  urls.py
Homework/Homework1/todo_project/todos/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
Homework/Homework1/todo_project/todos/migrations/: 0001_initial.py
Homework/Homework2/: .dockerignore  .gitignore  Dockerfile  README.md  implementation.md  package.json
Homework/Homework2/OpenAPI/: interview-platform.yaml
Homework/Homework2/backend/: package.json
Homework/Homework2/backend/src/: createServer.js  server.js  sessionStore.js
Homework/Homework2/backend/src/controllers/: sessionController.js
Homework/Homework2/backend/tests/: sessionApi.integration.test.js
Homework/Homework2/frontend/: package.json
Homework/Homework2/frontend/src/: App.css  App.jsx  config.js  index.css
Homework/Homework2/frontend/src/components/: CodeEditor.jsx  ParticipantList.jsx  RunPanel.jsx
Homework/Homework2/frontend/src/hooks/: useInterviewSession.js
Homework/Homework2/frontend/src/lib/: pythonRunner.js
Homework/Homework2/frontend/src/pages/: Home.jsx  (+1 more)
Homework/Homework3/: main.py  pyproject.toml  search.py  test.py  web_tools.py
backend/src/: server.js  sessionStore.js
snake_game/: README.md  index.html  package.json
snake_game/src/: App.jsx  index.css
