[project]
name = "homework3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.1",
    "minsearch",
    "requests>=2.32.5",
]

[tool.uv.sources]
minsearch = { git = "https://github.com/alexeygrigorev/minsearch" }
